- added state seal to footer and adjusted some spacing - increased font size on image caption on action page - fixed header contact phone hover - decreased font size on L1 page banner - updated an icon - tweaked fills on svgs to accommodate icon set

--- a/styleguide/source/assets/scss/02-molecules/_header-contact.scss
+++ b/styleguide/source/assets/scss/02-molecules/_header-contact.scss
@@ -116,9 +116,10 @@
     padding-bottom: 3px;
   }
 
+  &__value--phone,
   &__value--phone:hover {
     border-bottom: none;
-  }
+}
 
   &__details {
     font-size: 1rem;
