--- a/styleguide/source/assets/scss/06-theme/03-organisms/_page-banner.scss
+++ b/styleguide/source/assets/scss/06-theme/03-organisms/_page-banner.scss
@@ -3,8 +3,9 @@ $page-banner-inner-width: 612px;
 .ma__page-banner {
 
   &__icon {
-    
-    svg {
+
+    svg,
+    svg > g {
       fill: rgba($c-font-inverse,.5);
     }
   }
